rust/crates/ccusage-core/src/snapshots/ccusage_core__output__tests__snapshots_totals_json_with_extra_tokens_credits_and_zero_credit_omission.snap
---
source: crates/ccusage-core/src/output.rs
expression: "totals_json(&[first, second])"
---
{
  "cacheCreation1hTokens": 0,
  "cacheCreation5mTokens": 0,
  "cacheCreationTokens": 89,
  "cacheCreationUnbucketedTokens": 178,
  "cacheReadTokens": 10,
  "credits": 1.25,
  "inputTokens": 1234,
  "outputTokens": 567,
  "totalCost": 0.42,
  "totalTokens": 1920
}
